@@ -65,7 +65,7 @@ private:
 	string catch_v;          ///< Volume Name for Verbosity
 	double verbosity;        ///< Hit Verbosity
 	double RECORD_PASSBY;    ///< If set to one, records particles even if they do not leave any energy
-	double RECORD_MIRROR;    ///< If set to one, records particles in the mirror detectors
+	double RECORD_OPTICALPHOTONS;    ///< If set to one, records particles in the mirror detectors
 	string ELECTRONICNOISE;  ///< List of detectors for which electronic noise routines will be called
 	int fastMCMode;          ///< In fast MC mode, the particle smeared/unsmeared momenta are saved
 
